force-app/main/default/objects/Job__c/fields/Date_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Date_Uploaded__c</fullName>
    <label>Date Uploaded</label>
    <type>Date</type>
</CustomField>