force-app/main/default/objects/Job__c/fields/id_reference__c.field-meta.xml
<CustomField>
    <fullName>id_reference__c</fullName>
    <displayFormat>j-{000}</displayFormat>
    <label>id_reference</label>
    <type>AutoNumber</type>
</CustomField>