force-app/main/default/objects/Job__c/fields/JobID__c.field-meta.xml
<CustomField>
    <fullName>JobID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>JobID</label>
    <length>120</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>