force-app/main/default/objects/Job__c/listViews/All_Jobs.listView-meta.xml
<ListView>
    <fullName>All_Jobs</fullName>
    <columns>NAME</columns>
    <columns>JobID__c</columns>
    <columns>Status__c</columns>
    <columns>Account__c</columns>
    <columns>Date_Uploaded__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Jobs</label>
</ListView>