force-app/main/default/objects/Job__c/listViews/My_Jobs.listView-meta.xml
<ListView>
    <fullName>My_Jobs</fullName>
    <columns>NAME</columns>
    <columns>JobID__c</columns>
    <columns>Status__c</columns>
    <columns>Date_Uploaded__c</columns>
    <columns>Account__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>JobID__c</field>
        <operation>startsWith</operation>
        <value>j</value>
    </filters>
    <label>My Jobs</label>
</ListView>